Refactor[Frontend]: Make bot tables into an infinite
